# ptyx

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  LICENSE  README.md  default.nix  htix.cabal  package.yaml  ptyx.cabal  stack.yaml  tix.cabal
app/: Ptyx.hs
src/: Arrow.hs  Bdd.hs  Types.hs
src/Control/Monad/: Memo.hs
src/Data/Bool/: Applicative.hs
src/NixLight/: Annotations.hs  Ast.hs  FromHNix.hs  WithLoc.hs
src/NixLight/Annotations/: Parser.hs
src/Text/: ShowM.hs
src/Typer/: Environ.hs  Error.hs  Infer.hs
src/Typer/Environ/: Gamma.hs  TypeMap.hs
src/Types/: Arrow.hs  Bdd.hs  Bool.hs  DNF.hs  Distinguished.hs  FromAnnot.hs  Intervals.hs  List.hs  Node.hs  Pair.hs  Parser.hs  SetTheoretic.hs  Singletons.hs  UId.hs
test/: SubtypingSpec.hs  TyperSpec.hs
