name:                ptyx
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/regnat/ptyx#readme
license:             BSD3
license-file:        LICENSE
author:              Théophane Hufschmitt
maintainer:          theophane@hufschmitt.net
copyright:           2017 Théophane Hufschmitt
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types.Bdd
                       , Types.Arrow
                       , Types.Bool
                       , Types.Intervals
                       , Types
                       , Types.Node
                       , Types.FromAnnot
                       , Types.SetTheoretic
                       , Types.Singletons
                       , Types.UId
                       , NixLight.Annotations.Parser
                       , NixLight.Ast
                       , NixLight.FromHNix
                       , NixLight.WithLoc
                       , Typer.Infer
                       , Typer.Environ
                       , Typer.Environ.Gamma
                       , Typer.Environ.TypeMap
                       , Typer.Error
  build-depends:       base >= 4.7 && < 5
                       , containers
                       , hnix
                       , text
                       , data-fix
                       , data-default
                       , deriving-compat
                       , MonadRandom
                       , trifecta
                       , uuid
                       , parsers
                       , mtl
                       , random
  default-language:    Haskell2010

executable ptyx
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Ptyx.hs
  build-depends:       base >= 4.7 && < 5
                       , hnix
                       , ansi-wl-pprint
                       , ptyx
                       , data-default
                       , mtl

test-suite ptyx-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ptyx
                     , hnix
                     , hspec
                     , data-default
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       TyperSpec
                     , SubtypingSpec

source-repository head
  type:     git
  location: https://github.com/regnat/ptyx
